Stop setting all image backgrounds to #fff in dark mode
Currently we set all image backgrounds in dark mode to #fff, which
interferes with certain image content.  This patch stops that.  A
separate patch in the Android repository adds a white background in
JavaScript where no other background color is set.

Bug: T85646 T108333

--- a/styles/night.less
+++ b/styles/night.less
@@ -12,10 +12,6 @@ a.external {
     background-image: url( '../images/external-link-ltr.png' );
 }
 
-img {
-    background: #fff;
-}
-
 /* Same specificity as in MFE/less/content/hacks.less */
 .stable .content table.infobox {
     background: #000;
